# FogStation

./: .gitignore  Cargo.toml  README.md  dev_log.md
.fleet/: run.json
.github/workflows/: rust.yml
desktop/: Cargo.toml  openbios.elf  sunset_mdec.hex
desktop/src/: disc.rs  gdb.rs  gui.rs  main.rs  support.rs
docs/: compatibility.md  dev_log.md
src/: bios.rs  bus.rs  cdrom.rs  controller.rs  dma.rs  gpu.rs  lib.rs  memory.rs  scheduler.rs  spu.rs  timer.rs
src/cdrom/: commands.rs  disc.rs  format.rs  mod.rs
src/cpu/: cop0.rs  gte.rs  instruction.rs  interpreter.rs  mod.rs
src/cpu/jit/: mod.rs
src/mdec/: decode_macroblock.rs  mod.rs  set_quant_table.rs  set_scale_table.rs
