[package]
name = "psx-emu"
version = "0.1.0"
authors = ["Colin Suckow <csuckow99@gmail.com>"]
edition = "2021"

[profile.release]
#lto = true
debug = true

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bit_field = "0.10.1"
log = "0.4.14"
num-traits = "0.2"
num-derive = "0.3"
nalgebra = "0.29.0"
enum-display-derive = "0.1.1"
cranelift = "0.91.0"
cranelift-jit = "0.91.0"
cranelift-module = "0.91.0"