[package]
name = "vaporstation"
version = "0.1.0"
authors = ["Colin Suckow <csuckow99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[dependencies]
psx-emu = {path = ".."}
glium = { version = "0.29", default-features = true }
imgui = "0.7.0"
winit = "0.24.0"
imgui-winit-support = "0.7.0"
imgui-glium-renderer = "0.7.0"
byteorder = "1.4.2"
cue = { git = "https://github.com/lomereiter/libcue.rs" }
getopts = "0.2.21"
gdbstub = "0.4.5"
num = "0.4.0"
simple_logger = "1.11.0"
