[package]
name = "fogstation"
version = "0.1.0"
authors = ["Colin Suckow <csuckow99@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = true
debug = true

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[dependencies]
psx-emu = {path = ".."}
glium = { version = "0.29", default-features = true }
byteorder = "1.4.2"
getopts = "0.2.21"
gdbstub = "0.4.5"
num = "0.4.0"
simple_logger = "1.11.0"
gilrs = "0.8.2"
rcue = "0.1.3"
eframe = { version = "0.20.1", features = ["default_fonts", "glow"] }